# kallipai

./: .env.example  .envrc  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  LICENSE  README.md  arion-compose.nix  arion-pkgs.nix  deno.json  flake.nix  package.json  rustfmt.toml  tsconfig.base.json
crates/just-agent/: Cargo.toml
crates/just-agent-client/: Cargo.toml
crates/just-agent-client/src/: client.rs  lib.rs  types.rs
crates/just-agent-core/: Cargo.toml
crates/just-agent-core/src/: command.rs  config.rs  deferred.rs  lib.rs  persistence.rs  provider.rs  runner.rs  session.rs  types.rs
crates/just-agent-core/src/context/: compose.rs  mod.rs  store.rs  summarize.rs  turn.rs
crates/just-agent-core/src/context/compact/: evict.rs  mod.rs  summarize.rs  truncate.rs
crates/just-agent-core/src/policy/: agent.rs  executor.rs  mod.rs
crates/just-agent-core/src/policy/classifier/: delegate.rs  (+6 more)
crates/just-agent-core/src/tools/: mod.rs  skill.rs
crates/just-agent-daemon/: Cargo.toml
crates/just-agent-daemon/src/: args.rs  auth.rs  backend.rs  bridge.rs  main.rs  shutdown.rs  skill_promote.rs  sse.rs  state.rs  test_helpers.rs  token.rs
crates/just-agent-daemon/src/routes/: agent.rs  approval.rs  context.rs  deferred.rs  dirlock.rs  message.rs  mod.rs  prompt.rs  restore.rs  skill.rs  skill_promote.rs
crates/just-agent-daemon/tests/sandbox/: dirlock.rs  guest.rs  harness.rs  main.rs  normal.rs
crates/just-agent-run/: Cargo.toml
crates/just-agent-run/src/: main.rs
crates/just-agent-runtime/: Cargo.toml
crates/just-agent-runtime/src/: agent_task.rs  approval.rs  config.rs  deferred.rs  env_util.rs  event.rs  failover.rs  lib.rs  persistence.rs  retry.rs  runner.rs  session.rs  test_support.rs
crates/just-agent-runtime/src/context/: compact.rs  estimate.rs  mod.rs  store.rs  summarize.rs  turn.rs  warnings.rs
crates/just-agent-runtime/src/dirlock/: mod.rs
crates/just-agent-runtime/src/policy/: agent.rs  executor.rs  mod.rs
crates/just-agent-runtime/src/profile/: config.rs  mod.rs  model.rs  registry.rs
crates/just-agent-runtime/src/tools/: mod.rs  skill.rs
crates/just-agent-shell/: Cargo.toml
crates/just-agent-shell/benches/: spawn.rs
crates/just-agent-shell/src/: backend.rs  builder.rs  compat.rs  error.rs  lib.rs  pgroup.rs  supervisor.rs
crates/just-agent-shell/src/backend/: mock.rs  mod.rs
crates/just-agent-shell/src/landlock/: mod.rs  tests.rs
crates/just-agent-shell/src/seccomp/: mod.rs
crates/just-agent-shell/src/session/: capture.rs  create.rs  exec.rs  kill.rs  list.rs  mod.rs  restart.rs  switch.rs
crates/just-agent-shell/src/stateless/: backend.rs  builder.rs  cwd.rs  env_snapshot.rs  mock.rs  mod.rs  output.rs  pgroup.rs  supervisor.rs
crates/just-agent-shell/src/tools/: bg_kill.rs  bg_read.rs
crates/just-agent-shell/tests/: compare.rs  exec.rs
crates/just-agent-tui/: Cargo.toml
crates/just-agent-tui/src/: args.rs  command.rs  main.rs  session.rs  stdio.rs
crates/just-agent-tui/src/tui/: approval.rs  completion.rs  events.rs  history.rs  input.rs  mod.rs  render.rs  wrap.rs
crates/just-agent/src/: args.rs  main.rs
crates/kallip/: Cargo.toml
crates/kallip-agora/: Cargo.toml
crates/kallip-agora-common/: Cargo.toml
crates/kallip-agora-common/src/: bytes.rs  control.rs  event.rs  herald.rs  ids.rs  lib.rs  message.rs  proof.rs
crates/kallip-agora/src/: args.rs  auth.rs  integration.rs  main.rs  middleware.rs  routes.rs  session.rs  sse.rs  state.rs  test_helpers.rs  token.rs  username.rs
crates/kallip-agora/src/db/: mod.rs
crates/kallip-agora/src/routes/: admin.rs  auth.rs  conversations.rs  events.rs  herald.rs  internal.rs  me_enrollment_codes.rs  tagmata.rs  teams.rs
crates/kallip-client/: Cargo.toml
crates/kallip-client/src/: client.rs  lib.rs  types.rs
crates/kallip-common/: Cargo.toml
crates/kallip-common/src/: agentid.rs  approval.rs  auth_header.rs  authtoken.rs  command.rs  context.rs  idtype.rs  lib.rs  policy.rs  promote.rs  retry.rs  sse.rs  tokens.rs
crates/kallip-common/src/protocol/: agent.rs  approval.rs  budget.rs  error.rs  mod.rs  skill.rs  sse.rs
crates/kallip-daemon/: Cargo.toml
crates/kallip-daemon/src/: args.rs  auth.rs  backend.rs  bridge.rs  error.rs  main.rs  messaging.rs  shutdown.rs  skill_promote.rs  sse.rs  state.rs  test_helpers.rs  token.rs
crates/kallip-daemon/src/routes/: agent.rs  approval.rs  budget.rs  context.rs  dirlock.rs  message.rs  mod.rs  restore.rs  skill.rs  skill_promote.rs
crates/kallip-daemon/tests/sandbox/: dirlock.rs  guest.rs  guest_spawn.rs  harness.rs  main.rs  normal.rs
crates/kallip-herald/: Cargo.toml
crates/kallip-herald/src/: e2e.rs  herald.rs  main.rs
crates/kallip-run/: Cargo.toml
crates/kallip-run/src/: main.rs
crates/kallip-runtime/: Cargo.toml
crates/kallip-runtime/src/: agent_task.rs  approval.rs  config.rs  env_util.rs  event.rs  failover.rs  history.rs  lib.rs  llm_error.rs  persistence.rs  retry.rs  runner.rs  stream_accumulator.rs  test_support.rs  token_budget.rs
crates/kallip-runtime/src/context/: compose.rs  mod.rs  store.rs  tokens.rs  warnings.rs
crates/kallip-runtime/src/dirlock/: mod.rs  tests.rs
crates/kallip-runtime/src/policy/: agent.rs  executor.rs  mod.rs
crates/kallip-runtime/src/profile/: config.rs  mod.rs  model.rs  registry.rs
crates/kallip-runtime/src/tools/: mod.rs
crates/kallip-tui/: Cargo.toml
crates/kallip-tui/src/: args.rs  command.rs  main.rs  session.rs
crates/kallip-tui/src/tui/: alt_scroll.rs  completion.rs  events.rs  history.rs  input.rs  mod.rs  prompt.rs  render.rs
crates/kallip/src/: args.rs  main.rs
crates/platform/kallip-lesche/: Cargo.toml
crates/platform/kallip-lesche/src/: auth.rs  main.rs  middleware.rs  routes.rs  state.rs  test_support.rs
harbor-integration/: README.md  harbor-test.sh  pyproject.toml  setup-venv.sh
harbor-integration/configs/: hello-world.yaml  terminal-bench-2.yaml
harbor-integration/just_agent_harbor/: __init__.py  adapter.py  daemon.py
harbor-integration/kallip_harbor/: __init__.py  adapter.py  daemon.py  tagma.py
(+199 files in other folders)
