[workspace]
members = [
  "crates/kallip-common",
  "crates/kallip-runtime",
  "crates/kallip-shell",
  "crates/kallip",
  "crates/kallip-tui",
  "crates/kallip-daemon",
  "crates/kallip-client",
  "crates/kallip-run",
]

resolver = "3"

[workspace.package]
version = "0.1.0"
license = "MIT"

[workspace.metadata.crane]
name = "kallip"

[workspace.dependencies]
just-llm-client = "0.2.0"

kallip-common = { path = "crates/kallip-common", default-features = false }
kallip-runtime = { path = "crates/kallip-runtime" }
kallip-shell = { path = "crates/kallip-shell" }
kallip-client = { path = "crates/kallip-client" }
kallip-daemon = { path = "crates/kallip-daemon" }

anyhow = "1.0.102"
async-trait = "0.1.89"
async-stream = "0.3.6"
# `signal` transitively enables `process` (for `nix::unistd::Pid`).
nix = { version = "0.31", features = ["signal"] }
# Linux-first sandbox toolbox (landlock ruleset + mount-ns composable
# `prepare_*`/`install_*` primitives). Used only behind the `landlock` feature of
# kallip-shell, which is Linux-only. `default-features = false` drops its
# tokio proxy runtime — we only consume the spawn-independent primitives.
libsandbox = { git = "https://github.com/ImitationGameLabs/libsandbox-rs.git", rev = "979de21ae3f8a05d7efa0ff891343380b3622473", default-features = false }
libc = "0.2"
futures-core = "0.3.32"
futures-util = "0.3.32"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "query",
  "rustls",
  "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "sync",
  "time",
  "signal",
] }
tokio-util = { version = "0.7", features = ["rt"] }

axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
getrandom = "0.4"
sha2 = "0.11"
subtle = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rable = "0.2.0"
clap = { version = "4.6", features = ["derive", "env"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
ratatui-textarea = "0.9.1"
pulldown-cmark = "0.13.3"
comfy-table = "7.2.2"
syntect = "5.3"
dirs = "6"
unicode-normalization = "0.1"
rpassword = "7.5"
time = { version = "0.3", features = ["serde-well-known"] }
toml = "1"
tokenx-rs = "0.1"
temp-env = "0.3"
tempfile = "3"
wiremock = "0.6.5"
serial_test = "3.5.0"
# Dev-only: the `spawn` benchmark in kallip-shell (criterion). Not a runtime dep.
criterion = "0.8.2"
