[package]
name = "just-agent-daemon"
description = "HTTP API server hosting multiple agent instances"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
just-agent-runtime = { workspace = true, features = ["landlock", "seccomp"] }
just-agent-common = { workspace = true, features = ["axum"] }
just-llm-client = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
axum = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
# Auth-token hardening: 256-bit CSPRNG generation, base64url encoding, SHA-256
# at-rest hashing, and constant-time operator comparison.
base64 = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
# Wire-level assertion that the resolved User-Agent reaches the provider. reqwest applies client
# default headers (including User-Agent) at `execute` time, not at `Request::build`, so the UA cannot
# be read off a prepared `reqwest::Request` — only a real request to a mock server proves it (and
# catches an upstream `just-common::build_client` change that silently overwrites our UA).
wiremock = { workspace = true }
