[package]
name = "just-agent-run"
description = "Agent runner for scripting and benchmarking: create, stream output, print result"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
just-agent-client = { workspace = true }
just-agent-common = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
