[package]
name = "just-agent-runtime"
description = "Agent runtime: session management, context, policy, and tool dispatch (daemon-only)"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
just-agent-common = { workspace = true }
just-llm-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rable = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
portable-pty = { workspace = true }
strip-ansi-escapes = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
