[package]
name = "just-agent-runtime"
description = "Agent runtime: agent context, policy, and tool dispatch (daemon-only)"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
just-agent-common = { workspace = true }
just-agent-shell = { workspace = true }
just-llm-client = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rable = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
temp-env = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
serial_test = { workspace = true }
