[package]
name = "just-agent-shell"
description = "Provider-neutral shell/session tools for LLM applications"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
just-llm-client = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
portable-pty = { workspace = true }
strip-ansi-escapes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
# Stateless backend (`stateless` module): process spawning, pgroup kill, sticky
# cwd, env snapshot, background supervisor.
tokio-util = { workspace = true }
nix = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
unicode-normalization = { workspace = true }

[features]
# Testing utilities for downstream crates: exposes `MockShellBackend` (and
# future test helpers) so consumers can drive shell-tool tests without a real
# PTY. Off by default to keep test-only code out of production builds.
testutils = []

[dev-dependencies]
# Dev-only: the `spawn` benchmark measures per-command spawn cost across the
# stateless backend, the PTY backend, and a bare `bash -c` floor. Not pulled by
# runtime/daemon (dev-dependencies are non-transitive).
criterion = { workspace = true }

[[bench]]
name = "spawn"
harness = false
