[package]
name = "just-agent"
description = "Agent CLI: daemon client"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
just-agent-client = { workspace = true }
just-agent-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
