[package]
name = "kallip-agora-common"
description = "Wire types for the kallip-agora relay and kallip-herald connector"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
kallip-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
# Public-key verification only (no private-key material) so the agora (verifier),
# the herald (signer), and the app SDK share one transcript + verify contract.
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
