[package]
name = "kallip-agora"
description = "Public-internet relay control plane for kallip agent teams"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
kallip-common = { workspace = true, features = ["axum"] }
kallip-agora-common = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures-util = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
