[package]
name = "kallip-agora"
description = "Public-internet relay control plane for kallip agent tagmata"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
kallip-common = { workspace = true, features = ["axum"] }
kallip-agora-common = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
futures-util = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
async-trait = { workspace = true }
webauthn-rs = { workspace = true }
cookie = { workspace = true }
url = { workspace = true }
ipnet = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
