[package]
name = "kallip-client"
description = "Tagma client library for kallip"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
kallip-common = { workspace = true }
just-llm-client = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
