[package]
name = "kallip-common"
description = "Shared types and command parsing for kallip"
edition = "2024"
version.workspace = true
license.workspace = true

[features]
default = ["axum"]
axum = ["dep:axum"]

[dependencies]
axum = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
