[package]
name = "kallip-common"
description = "Shared types and command parsing for kallip"
edition = "2024"
version.workspace = true
license.workspace = true

[features]
default = ["axum"]
axum = ["dep:axum"]

[dependencies]
axum = { workspace = true, optional = true }
futures-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
