[package]
name = "kallip-run"
description = "Agent runner for scripting and benchmarking: create, stream output, print result"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
kallip-client = { workspace = true }
kallip-common = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
