[package]
name = "kallip"
description = "Agent CLI: tagma client"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
kallip-client = { workspace = true }
kallip-common = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
