[package]
name = "kallip-lesche"
description = "kallip data-plane relay: herald tunnels, app event streams, envelope relay"
edition = "2024"
version.workspace = true
license.workspace = true

[[bin]]
name = "kallip-lesche"
path = "src/main.rs"

[dependencies]
kallip-agora-common = { workspace = true }
kallip-common = { workspace = true, features = ["axum"] }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
cookie = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
